# data-compression

./: .project  README.md
BCH_codes/: bch_functions.c  bch_functions.h  bch_test  mytest  mytest.c
BitGroomingZ-master/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  bg.pc.in  config.h  config.status  configure  configure.ac  libtool
BitGroomingZ-master/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
BitGroomingZ-master/bg/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  libBG.la
BitGroomingZ-master/bg/.libs/: libBG.la  libBG.lai  libBG.so.0  libBG.so.0.0.1
BitGroomingZ-master/bg/include/: ByteToolkit.h  bg.h  callZlib.h  conf.h
BitGroomingZ-master/bg/src/: ByteToolkit.c  bg.c  callZlib.c  conf.c  libBG_la-ByteToolkit.lo  libBG_la-bg.lo  libBG_la-callZlib.lo  libBG_la-conf.lo  libBG_la-dictionary.lo  libBG_la-iniparser.lo  libBG_la-rw.lo  rw.c
BitGroomingZ-master/bg/src/.deps/: libBG_la-ByteToolkit.Plo  libBG_la-bg.Plo  libBG_la-callZlib.Plo  libBG_la-conf.Plo  libBG_la-dictionary.Plo  libBG_la-iniparser.Plo  libBG_la-rw.Plo
BitGroomingZ-master/examples/: Makefile  Makefile.am  Makefile.in  bg.config  testfloat_compress  testfloat_compress.c  testfloat_decompress  testfloat_decompress.c
BitGroomingZ-master/examples/.deps/: testfloat_compress.Po  testfloat_decompress.Po
BitGroomingZ-master/zlib/: CMakeLists.txt  Makefile  Makefile.in  libzlib.la  libzlib_la-adler32.lo  libzlib_la-compress.lo  libzlib_la-crc32.lo  libzlib_la-gzread.lo  libzlib_la-zutil.lo
BitGroomingZ-master/zlib/.deps/: libzlib_la-adler32.Plo  libzlib_la-gzclose.Plo  libzlib_la-gzlib.Plo  libzlib_la-infback.Plo  libzlib_la-inffast.Plo  libzlib_la-inflate.Plo  libzlib_la-inftrees.Plo  libzlib_la-trees.Plo  libzlib_la-uncompr.Plo
BitGroomingZ-master/zlib/.libs/: libzlib.lai  libzlib.so.0.0.0
SZ/: Makefile  config.status  libtool
SZ/example/: Makefile  sz  sz_gsl.c  testdouble_compress  testdouble_decompress  testdouble_decompress.c  testfloat_compress  testfloat_decompress  testint_compress  testint_decompress
SZ/example/.deps/: sz.Po  testdouble_compress.Po  testdouble_decompress.Po  testfloat_compress.Po  testfloat_decompress.Po  (+2 more)
SZ/sz/: Makefile  libSZ.la
SZ/zlib/: Makefile  libzlib.la  libzlib_la-gzclose.lo  libzlib_la-inflate.lo  libzlib_la-trees.lo  libzlib_la-uncompr.lo
SZ/zstd/: Makefile  libzstd.la
bch_encoder_decoder-master/: bch_decoder.c  bch_encoder.c  bch_global.c  data_generator.c  error.c
digitroundingZ-master/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  config.h  config.status  configure  configure.ac  dr.pc.in  libtool
digitroundingZ-master/examples/: Makefile  Makefile.am  Makefile.in  digit_CompDecomp  digit_CompDecomp.c
digitroundingZ-master/libdround/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  libdround.la
digitroundingZ-master/libdround/.libs/: libdround.la  libdround.lai  libdround.so.0.0.1
digitroundingZ-master/libdround/include/: callZlib.h  defines.h  iochain.h  libdround.h
digitroundingZ-master/libdround/src/: ByteToolkit.c  callZlib.c  libdround.c  libdround_la-ByteToolkit.lo  libdround_la-callZlib.lo  libdround_la-iochain.lo  libdround_la-libdround.lo  libdround_la-rw.lo  rw.c
digitroundingZ-master/libdround/src/.deps/: libdround_la-ByteToolkit.Plo  libdround_la-callZlib.Plo  libdround_la-iochain.Plo  libdround_la-libdround.Plo  libdround_la-rw.Plo
digitroundingZ-master/zlib/: CMakeLists.txt  Makefile  Makefile.in  libzlib_la-deflate.lo  libzlib_la-gzlib.lo  libzlib_la-gzwrite.lo  libzlib_la-infback.lo  libzlib_la-inffast.lo  libzlib_la-inftrees.lo
fftss-3.0-20071031/fftss-3.0-20071031/: Makefile  config.status  libtool
fpc/: fpc  fpc.c
himeno_compress_koi/: 0_3torus-4-4-4.xml  Makefile  Makefile.nativempi  Makefile.simgrid  bmt_simgrid  cluster_torus_old.xml  dataCompression.h  himenoBMTxps_comp.c  param.h
himeno_compress_koi/config/: make.def0507
himeno_compress_koi/org/: Makefile  dataCompression.c  himenoBMTxps_comp.c
impl/: Makefile  bit.txt  bmt  bmt_comp  bmt_openmpi  bmt_original_simgrid  bmt_simgrid  cluster_torus_old.xml  data-compression.xlsx  dataComp.c  dataComp.h  dataCompression.c  dataCompression.h  experiment.sh  hamming  hamming.c  himenoBMTxps.c  himenoBMTxps_comp.c  himeno_simgrid  input.txt  input_output.txt  k-means  k-means.c  k-means.csv  k-means_obs_info.csv  kmeans_openmpi  kmeans_simgrid  lu  lu.c  lu.csv  mm  mm.c  mm.csv  mycompress  mycompress.c  mycompress_bcast  mycompress_bcast.c  mycompress_cn  mycompress_cn.c  mycompress_i  (+13 more)
impl/dataset/: gen_nums.py  test_output_5_1e-06_100.txt  testfloat_8_8_128.dat.sz  testfloat_8_8_128.dat.zs.out  testfloat_8_8_128.dat.zs.out.txt
impl/testdata/: mat_4_4.txt  mat_4_8.txt
k-means-clustering-mpi-master/k-means-clustering-mpi-master/: k-means
reedsolomon/: mytest  mytest.c  test
spdp/: SPDP_10.c  num_plasma.sp.spdp  spdp
tools/: float_eq_131072.txt.bc  float_eq_131072.txt.bi  float_eq_131072.txt.bit.txt  float_eq_16384.txt.bc  float_eq_16384.txt.bi  float_eq_16384.txt.bnp.txt  float_eq_262144.txt.bc  float_eq_262144.txt.bi  float_eq_262144.txt.bnp.txt  float_eq_32768.txt.bc  float_eq_32768.txt.bi  float_eq_32768.txt.bm.txt  float_eq_65536.txt.bc  float_eq_65536.txt.bi  float_eq_65536.txt.byte.txt  float_eq_8192.txt.bc  float_eq_8192.txt.bi  float_eq_8192.txt.bit.txt  float_rand_131072.txt.bc  float_rand_131072.txt.bi  float_rand_131072.txt.bit.txt  float_rand_131072.txt.bop.txt  float_rand_16384.txt.bc  float_rand_16384.txt.bi  float_rand_16384.txt.bnp.txt  float_rand_16384.txt.byte.txt  float_rand_262144.txt.bc  float_rand_262144.txt.bi  float_rand_262144.txt.bm.txt  float_rand_262144.txt.byte.txt  float_rand_32768.txt.bc  float_rand_32768.txt.bi  float_rand_32768.txt.bm.txt  float_rand_32768.txt.bop.txt  float_rand_65536.txt.bc  float_rand_65536.txt.bi  float_rand_65536.txt.bnp.txt  float_rand_65536.txt.byte.txt  float_rand_8192.txt.bc  float_rand_8192.txt.bi  (+41 more)
visual/: plot-bin.py  plot.py  plot_cluster.py  test1.txt  test2.txt  testdouble_8_8_128_output.txt
(+280 files in other folders)
